# SimpleEngine

./: .gitignore  CMakeLists.txt  README.md
core/core/: JsonTest.cpp  JsonTest.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Mesh.cpp  Mesh.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Transform.cpp  Transform.hpp  core.cpp  core.hpp  in.json
core/core.xcodeproj/: project.pbxproj
core/core.xcodeproj/xcuserdata/sandstorm04.xcuserdatad/xcschemes/: core.xcscheme  xcschememanagement.plist
core/core/sdk/: Camera.h  Camera.hpp  CameraComponent.hpp  Component.hpp  DirectionalLight.hpp  Engine.hpp  Light.hpp  Matrix4x4.hpp  Mesh.hpp  MeshRenderer.h  MeshRendererComponent.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  PointLight.hpp  RenderPass.hpp  Scene.hpp  SceneObject.hpp  SpotLight.hpp  Texture.hpp  Transform.hpp  Vec4.hpp  Vector4.hpp  corePriv.hpp
core/core/sdk/lights/: DirectionalLight.hpp  LightComponent.hpp  PointLight.hpp  SpotLight.hpp
core/core/src/: Camera.cpp  CameraComponent.cpp  Component.cpp  DirectionalLight.cpp  Engine.cpp  Light.cpp  Matrix4x4.cpp  Mesh.cpp  MeshRenderer.cpp  MeshRendererComponent.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PointLight.cpp  RenderPass.cpp  SceneObject.cpp  ShaderProgram.cpp  ShaderProgram.hpp  SpotLight.cpp  Texture.cpp  Transform.cpp  Vec4.cpp  Vector4.cpp  core.cpp
core/core/src/lights/: DirectionalLight.cpp  LightComponent.cpp  PointLight.cpp  SpotLight.cpp
core/core/src/shaders/: DepthVertexShader.vertexshader  DirectionalFragmentShader.fragmentshader  LightMapFragmentShader.fragmentshader  PhongDirectionalFragmentShader.fragmentshader  PhongPointLightFragmentShader.fragmentshader  PointLightFragmentShader.fragmentshader  SimpleDepthFragmentShader.fragmentshader  SimpleDepthVertexShader.vertexshader  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  VertexShader.vertexshader
core/core/test/: JsonTest.hpp  MatrixTest.cpp  MatrixTest.hpp  SceneObjectTest.cpp  SceneObjectTest.hpp
osx/osx/: AppDelegate.h  AppDelegate.mm  GameViewController.h  GameViewController.m  Info.plist  OpenGLView.h  OpenGLView.m  Shaders.metal  SharedStructures.h  main.m
osx/osx.xcodeproj/: project.pbxproj
